systemd-genie (1.39) buster bullseye bookworm sid focal bionic; urgency=medium

        * Better WSLg support, courtesy of @diddledan.

 -- Alistair Young <avatar@arkane-systems.net>  Thu, 22 Apr 2021 16:00:00 -0500

systemd-genie (1.38) buster bullseye bookworm sid focal bionic; urgency=medium

        * Restored original default systemd startup timeout.
        * Changes to support WSLg.

 -- Alistair Young <avatar@arkane-systems.net>  Thu, 22 Apr 2021 14:32:00 -0500

systemd-genie (1.37) buster bullseye bookworm sid focal bionic; urgency=medium

        * Reduced default systemd startup timeout to 60s.
        * Added display of failed systemd units on timeout.

 -- Alistair Young <avatar@arkane-systems.net>  Fri, 16 Apr 2021 12:32:00 -0500

systemd-genie (1.36) buster bullseye bookworm sid focal bionic; urgency=medium

        * Added dependency on hostname.
        * Added --is-running and --is-in-bottle informational options.
        * Added storage of systemd external PID in pidfile.
        * Removed dependencies on mount(1) and hostname(1).
        * Modified genie -u to wait for systemd exit.

 -- Alistair Young <avatar@arkane-systems.net>  Sun, 14 Mar 2021 13:48:00 -0500

systemd-genie (1.35) buster bullseye bookworm sid focal bionic; urgency=medium

        * Added dependency on systemd 232.
        * Revised build procedure.

 -- Alistair Young <avatar@arkane-systems.net>  Sun, 21 Feb 2021 13:40:00 -0500

systemd-genie (1.34) unstable; urgency=medium

        * Fixed regression: restored gawk dependency.

 -- Alistair Young <avatar@arkane-systems.net>  Tue, 26 Jan 2021 08:48:00 -0500

systemd-genie (1.33) unstable; urgency=medium

        * Removed faulty root check.

 -- Alistair Young <avatar@arkane-systems.net>  Sat, 23 Jan 2021 11:38:00 -0500

systemd-genie (1.32) unstable; urgency=medium

        * Added error-checking to configuration variables.
        * [genie -c] Preserved args containing spaces.