@@ -1,8 +1,10 @@
 systemd-genie (1.39) buster bullseye bookworm sid focal bionic; urgency=medium
 
-        * Better WSLg support, courtesy of @diddledan.
+        * Better WSLg support, based on the code of Daniel Llewellyn
+          (@diddledan), here:
+          https://github.com/diddledan/one-script-wsl2-systemd.
 
- -- Alistair Young <avatar@arkane-systems.net>  Thu, 22 Apr 2021 16:00:00 -0500
+ -- Alistair Young <avatar@arkane-systems.net>  Thu, 22 Apr 2021 18:00:00 -0500
 
 systemd-genie (1.38) buster bullseye bookworm sid focal bionic; urgency=medium
 
